fix return type of exceptions